Add working function to assign input to variables

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<div class="name">
 			<label for="first-name">Nome:</label>
-			<input type="text" id="first-name" name="name" minlength="3" value="">
+			<input type="text" id="first-name" name="name" placeholder=" " minlength="3" value="">
 			<label for="last-name">Cognome:</label>
 			<input type="text" id="last-name" name="lastname" minlength="3" value="">
 		</div>
