Add reset button

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 					<input type="text" id="age" name="age" placeholder="Età" required value="">
 				</div>
 			</div>
-			<input type="button" class="btn-submit" value="Calcola">
-
+			<div>
+				<input type="button" class="btn-submit" value="Calcola">
+				<input type="button" class="btn-reset" value="Cancella">
+			</div>
 
 
 			<!-- inseriti valori non validi -->
