Add ticket summary and prices

--- a/index.html
+++ b/index.html
@@ -50,18 +50,22 @@
 				Entrambi i valori inseriti devono essere maggiori di zero!
 			</div>
 
+			<h2>Il tuo biglietto</h2>
 
-
-
-			<div>Distanza da percorrere: Km
-				<span id="distance"></span>
+			<div class="ticket">
+				<div class="passenger">
+					<div class="summary">Nome: <span class="p-first-name"></span></div>
+					<div class="summary">Cognome: <span class="p-last-name"></span></div>
+					<div class="summary">Età: <span class="p-age"></span> anni</div>
+					<div class="summary">Distanza: <span class="p-distance"></span> Km</div>
+				</div>
+				<div class="prices">
+					<div class="summary">Prezzo pieno: € <span class="p-full-price"></span></div>
+					<div class="summary">Percentuale sconto: <span class="p-discount-percent"></span></div>
+					<div class="summary">Risparmio: <span class="p-discount-amount"></span></div>
+					<div class="summary">Prezzo finale: <span class="p-discount-price"></span></div>
+				</div>
 			</div>
-			<div>Età del passeggero: anni
-				<span id="age"></span>
-			</div>
-
-
-		</div>
 	</main>
 </body>
 
